--- a/src/UniversalToolBox/UniversalToolBox.csproj
+++ b/src/UniversalToolBox/UniversalToolBox.csproj
@@ -51,6 +51,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="IronOcr" Version="2023.11.35" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="MudBlazor" Version="6.11.1" />
     </ItemGroup>
